添加了步进电机的控制和数码管的控制功能

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -29,5 +29,6 @@
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:layout_marginLeft="20dp"
+        android:visibility="invisible"
         android:background="@mipmap/left"/>
 </RelativeLayout>
