--- a/app/src/main/res/layout/one_layout.xml
+++ b/app/src/main/res/layout/one_layout.xml
@@ -21,6 +21,8 @@
                 android:id="@+id/id_temp_humi_sensor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colorAccent"
+                android:textSize="20sp"
                 android:text="温湿度传感器"/>
         </LinearLayout>
         <LinearLayout
@@ -37,6 +39,8 @@
                 android:id="@+id/id_illumination_sensor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colorAccent"
+                android:textSize="20sp"
                 android:text="光照传感器"/>
         </LinearLayout>
         <LinearLayout
@@ -53,6 +57,8 @@
                 android:id="@+id/id_smoke_sensor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colorAccent"
+                android:textSize="20sp"
                 android:text="烟雾传感器"/>
         </LinearLayout>
         <LinearLayout
@@ -69,6 +75,8 @@
                 android:id="@+id/id_rain_drop_sensor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colorAccent"
+                android:textSize="20sp"
                 android:text="雨滴传感器"/>
         </LinearLayout>
         <LinearLayout
@@ -85,6 +93,8 @@
                 android:id="@+id/id_combustibles_gas_sensor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colorAccent"
+                android:textSize="20sp"
                 android:text="可燃气体传感器"/>
         </LinearLayout>
         <LinearLayout
@@ -101,6 +111,8 @@
                 android:id="@+id/id_dip_sensor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colorAccent"
+                android:textSize="20sp"
                 android:text="倾角传感器"/>
         </LinearLayout>
     </GridLayout>
