--- a/app/src/main/res/layout/control_window_layout.xml
+++ b/app/src/main/res/layout/control_window_layout.xml
@@ -79,5 +79,33 @@
                 android:textSize="15sp"
                 android:text="反转"/>
         </RadioGroup>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="20sp"
+            android:text="蜂鸣器"/>
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <RadioButton
+                android:id="@+id/id_open_beep_rbtn"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="15sp"
+                android:text="打开"/>
+            <RadioButton
+                android:id="@+id/id_close_beep_rbtn"
+                android:layout_marginLeft="20dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="15sp"
+                android:text="关闭"/>
+        </RadioGroup>
     </LinearLayout>
 </RelativeLayout>
